# itmo-mhs-python

./: pyproject.toml
hw1/: nl.py  pyproject.toml  tail.py  wc.py
hw1/artifacts/: nl.txt  tail_out  test_1.txt  test_2.txt  wc.out
hw2/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
hw2/artifacts/: commands.txt  doc.tex
hw2/latex_generator/: README.MD
hw3/: find_collision.py  main.py  matrix.py  pyproject.toml
hw3/artifacts/: A.txt  C.txt  CD.txt  D.txt
